Translate index.html content from Danish to English
Updated the language from Danish to English throughout the document, including titles, headers, and consultation details.

--- a/index.html
+++ b/index.html
@@ -1,103 +1,103 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gem Experience | Professionel Tech Rådgivning</title>
+    <title>Gem Experience | Pro Tech Consulting</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="lang-switch">
-        <a href="index.html">🇺🇸</a>
-        <a href="index-dk.html" class="active">🇩🇰</a>
+        <a href="index.html" class="active">🇺🇸</a>
+        <a href="index-dk.html">🇩🇰</a>
     </div>
 
     <header>
-        <h1>Gem Experience | Professionel Tech Rådgivning</h1>
-        <p class="tagline">20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion (Logic, Ableton, VST/VSTi). Book konsultation til dybdegående fejlfinding, systemoptimering og afgørende rådgivning om udstyrsinvesteringer. Få specialistvejledning til dit fulde tekniske setup.</p>
+        <h1>Gem Experience | Pro Tech Consultation</h1>
+        <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
     </header>
 
     <main>
         <section id="service">
-            <h2>Tekniske Rådgivningssessioner</h2>
-            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Korte sessioner har en merpris for at kompensere for tidsforbruget. Større bookinger modtager rabat. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
+            <h2>Technical Consultation Sessions</h2>
+            <p>Access deep expertise without commitment. Short sessions carry a premium to compensate for the time overhead. Bulk bookings receive a discount. All prices include necessary contributions for pension/insurance overhead.</p>
             
             <ul>
-                <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
-                <li><strong>Systemoptimering:</strong> Rigs, hybrid-setups (analog/digital) og rådgivning om systemstabilitet.</li>
-                <li><strong>Udstyr & Investering:</strong> Uvildig konsultation om, hvad du skal købe næst, eller hvordan du bruger dit eksisterende udstyr bedst.</li>
-                <li><strong>Avanceret Fejlfinding:</strong> Løsninger på komplekse problemer, som Tier 1 support ikke kan håndtere.</li>
+                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
+                <li><strong>System Optimization:</strong> Rigs, hybrid setups (analog/digital), and system stability advice.</li>
+                <li><strong>Gear & Investment:</strong> Unbiased consultation on what to buy next or how to utilize existing gear.</li>
+                <li><strong>Advanced Troubleshooting:</strong> Solutions for complex problems Tier 1 support can't handle.</li>
             </ul>
 
             <div class="pricing-table">
                 <table>
                     <thead>
                         <tr>
-                            <th>Sessionslængde</th>
-                            <th>Total Tidsblok (Inkl. Pauser)</th>
-                            <th>Price (DKK)</th>
-                            <th>Handling</th>
+                            <th>Session Length</th>
+                            <th>Total Block Time (Includes Breaks)</th>
+                            <th>Price (USD)</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>5 Minutter (Pre-Call Forespørgsel)</td>
+                            <td>5 Minutes (Pre-Call Inquiry)</td>
                             <td>5 min</td>
-                            <td>120.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Book</a></td>
+                            <td>17.27</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>15 Minutter</td>
+                            <td>15 Minutes</td>
                             <td>15 min</td>
-                            <td>250.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Book</a></td>
+                            <td>35.97</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>30 Minutter</td>
+                            <td>30 Minutes</td>
                             <td>30 min</td>
-                            <td>450.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Book</a></td>
+                            <td>64.75</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>50 Minutter (Standard)</td>
+                            <td>50 Minutes (Standard)</td>
                             <td>50 min</td>
-                            <td>650.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Book</a></td>
+                            <td>93.50</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>2 Timer (Rabat)</td>
-                            <td>110 min (2x50 min konsultation + 10 min pause)</td>
-                            <td>1250.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Book</a></td>
+                            <td>2 Hours (Discounted)</td>
+                            <td>110 min (2x50 min consult + 10 min break)</td>
+                            <td>179.85</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>3 Timer (Rabat)</td>
-                            <td>170 min (3x50 min konsultation + 2x10 min pauser)</td>
-                            <td>1800.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Book</a></td>
+                            <td>3 Hours (Discounted)</td>
+                            <td>170 min (3x50 min consult + 2x10 min breaks)</td>
+                            <td>259.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>4 Timer (Rabat)</td>
-                            <td>230 min (4x50 min konsultation + 3x10 min pauser)</td>
-                            <td>2300.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Book</a></td>
+                            <td>4 Hours (Discounted)</td>
+                            <td>230 min (4x50 min consult + 3x10 min breaks)</td>
+                            <td>330.95</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
-                            <td>8 Timer (Heldags Rabat)</td>
-                            <td>470 min (8x50 min konsultation + 7x10 min pauser)</td>
-                            <td>4400.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Book</a></td>
+                            <td>8 Hours (Full Day Discount)</td>
+                            <td>470 min (8x50 min consult + 7x10 min breaks)</td>
+                            <td>633.10</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <p class="note"><strong>Booking Skema:</strong> Betaling er påkrævet forud via PayPal. Efter betaling modtager du en bekræftelse og en direkte e-mail for at aftale tidspunktet.</p>
+            <p class="note"><strong>Booking Schedule:</strong> Payment is required upfront via PayPal. After payment, you will receive confirmation and a direct email to finalize the appointment time.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Gem Experience. Kontakt: GemExperience@icloud.com</p>
+        <p>&copy; 2025 Gem Experience. Contact: GemExperience@icloud.com</p>
     </footer>
 </body>
 </html>
