Update booking note in index-dk.html
Removed additional information about personal scheduling tools from the booking note.

--- a/index-dk.html
+++ b/index-dk.html
@@ -92,7 +92,7 @@
                 </table>
             </div>
 
-            <p class="note"><strong>Booking Skema:</strong> Betaling er påkrævet forud via PayPal. Efter betaling modtager du en bekræftelse og en direkte e-mail for at aftale tidspunktet. Du kan bruge personlige planlægningsværktøjer som Google Kalender eller iPhone Kalender til at styre din tilgængelighed.</p>
+            <p class="note"><strong>Booking Skema:</strong> Betaling er påkrævet forud via PayPal. Efter betaling modtager du en bekræftelse og en direkte e-mail for at aftale tidspunktet.</p>
         </section>
     </main>
 
