Add logo image to header in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
 
     <header>
+        <img src="Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" alt="Gem Experience Logo" class="header-logo">
         <h1>Gem Experience | Pro Tech Consultation</h1>
         <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
     </header>
