Add logo image to header in index-dk.html

--- a/index-dk.html
+++ b/index-dk.html
@@ -13,6 +13,7 @@
     </div>
 
     <header>
+        <img src="Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" alt="Gem Experience Logo" class="header-logo">
         <h1>Gem Experience | Professionel Tech Rådgivning</h1>
         <p class="tagline">20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion (Logic, Ableton, VST/VSTi). Book konsultation til dybdegående fejlfinding, systemoptimering og afgørende rådgivning om udstyrsinvesteringer. Få specialistvejledning til dit fulde tekniske setup.</p>
     </header>
