Add Open Graph meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gem Experience | Pro Tech Consulting</title>
     <link rel="stylesheet" href="style.css">
+
+    <meta property="og:title" content="Gem Experience | Expert Pro Tech Consultation" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gemexperience.github.io/pro-tech-consulting/index.html" />
+    <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
+    <meta property="og:description" content="20+ years expert in Pro Audio/Video & Hybrid Analog/Digital Production. Advanced troubleshooting, system optimization, and crucial gear advice." />
+    <meta property="og:site_name" content="Gem Experience" />
 </head>
 <body>
     <div class="lang-switch">
