Enhance index-dk.html with Open Graph metadata
Added Open Graph meta tags for improved social sharing.

--- a/index-dk.html
+++ b/index-dk.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gem Experience | Professionel Tech Rådgivning</title>
     <link rel="stylesheet" href="style.css">
+
+    <meta property="og:title" content="Gem Experience | Ekspert Professionel Tech Rådgivning" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gemexperience.github.io/pro-tech-consulting/index-dk.html" />
+    <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
+    <meta property="og:description" content="20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion. Avanceret fejlfinding, systemoptimering og afgørende rådgivning om udstyr." />
+    <meta property="og:site_name" content="Gem Experience" />
 </head>
 <body>
     <div class="lang-switch">
