--- a/index-dk.html
+++ b/index-dk.html
@@ -43,7 +43,7 @@
                         <tr>
                             <th>Sessionslængde</th>
                             <th>Total Tidsblok (Inkl. Pauser)</th>
-                            <th>Price (DKK)</th>
+                            <th>Pris (DKK)</th>
                             <th>Handling</th>
                         </tr>
                     </thead>
