--- a/index.html
+++ b/index.html
@@ -1,111 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gem Experience | Pro Tech Consulting</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gem Experience | Advanced Production & System Consulting</title>
+    <link rel="stylesheet" href="style.css">
 
-    <meta property="og:title" content="Gem Experience | Expert Pro Tech Consultation" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gemexperience.github.io/pro-tech-consulting/index.html" />
-    <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
-    <meta property="og:description" content="20+ years expert in Pro Audio/Video & Hybrid Analog/Digital Production. Advanced troubleshooting, system optimization, and crucial gear advice." />
-    <meta property="og:site_name" content="Gem Experience" />
+    <meta property="og:title" content="Gem Experience | Low Latency & DAW System Expert" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gemexperience.github.io/pro-tech-consulting/index.html" />
+    <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
+    <meta property="og:description" content="20+ years expert in Pro Audio/Video & Hybrid Analog/Digital Production. Advanced troubleshooting, system optimization, and crucial gear advice." />
+    <meta property="og:site_name" content="Gem Experience" />
 </head>
 <body>
-    <div class="lang-switch">
-        <a href="index.html" class="active">🇺🇸</a>
-        <a href="index-dk.html">🇩🇰</a>
-    </div>
+    <div class="lang-switch">
+        <a href="index.html" class="active">🇺🇸</a>
+        <a href="index-dk.html">🇩🇰</a>
+    </div>
 
-    <header>
-        <img src="Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" alt="Gem Experience Logo" class="header-logo">
-        <h1>Gem Experience | Pro Tech Consultation</h1>
-        <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
-    </header>
+    <header>
+        <img src="Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" alt="Gem Experience Logo" class="header-logo">
+        <h1>Gem Experience | Advanced Production & System Consulting</h1>
+        <p class="tagline">**20+ Year Certified Expert in Low-Latency Audio, DAW Workflow, and Hybrid Analog/Digital Production.** I diagnose and resolve the complex technical issues that Tier 1 support can't touch. Get specialist guidance to optimize your system for flawless creative flow.</p>
+    </header>
 
-    <main>
-        <section id="service">
-            <h2>Technical Consultation Sessions</h2>
-            <p>Access deep expertise without commitment. Short sessions carry a premium to compensate for the time overhead. Bulk bookings receive a discount. All prices include necessary contributions for pension/insurance overhead.</p>
-            
-            <ul>
-                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
-                <li><strong>System Optimization:</strong> Rigs, hybrid setups (analog/digital), and system stability advice.</li>
-                <li><strong>Gear & Investment:</strong> Unbiased consultation on what to buy next or how to utilize existing gear.</li>
-                <li><strong>Advanced Troubleshooting:</strong> Solutions for complex problems Tier 1 support can't handle.</li>
-            </ul>
+    <main>
+        <section id="authority">
+            <h2>Why Consult Gem Experience?</h2>
+            <p>You are hiring deep, tested expertise—not just software knowledge. My background ensures you get actionable, professional solutions:</p>
+            <ul>
+                <li>**Certified DAW Mastery:** Certified license holder of Ableton Live Suite 10, 11 & Reaper, with hands-on proficiency in Logic Pro X and Pro Tools.</li>
+                <li>**Low Latency Specialist:** Decades of experience optimizing Mac and Windows systems specifically for flawless low-latency audio recording and complex VST/VSTi environments.</li>
+                <li>**Corporate Production Background:** Professional experience with Content Power House, Danish Radio, and Telia Sonera Mobile A/S.</li>
+            </ul>
+        </section>
 
-            <div class="pricing-table">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Session Length</th>
-                            <th>Total Block Time (Includes Breaks)</th>
-                            <th>Price (USD)</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>5 Minutes (Pre-Call Inquiry)</td>
-                            <td>5 min</td>
-                            <td>17.27</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>15 Minutes</td>
-                            <td>15 min</td>
-                            <td>35.97</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>30 Minutes</td>
-                            <td>30 min</td>
-                            <td>64.75</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>50 Minutes (Standard)</td>
-                            <td>50 min</td>
-                            <td>93.50</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>2 Hours (Discounted)</td>
-                            <td>110 min (2x50 min consult + 10 min break)</td>
-                            <td>179.85</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>3 Hours (Discounted)</td>
-                            <td>170 min (3x50 min consult + 2x10 min breaks)</td>
-                            <td>259.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>4 Hours (Discounted)</td>
-                            <td>230 min (4x50 min consult + 3x10 min breaks)</td>
-                            <td>330.95</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                        <tr>
-                            <td>8 Hours (Full Day Discount)</td>
-                            <td>470 min (8x50 min consult + 7x10 min breaks)</td>
-                            <td>633.10</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Out</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <section id="service">
+            <h2>Expert Technical Solutions</h2>
+            <p>I offer targeted consulting across the three pillars of a professional production setup:</p>
+            
+            <ul>
+                <li>**System Optimization & Latency Fixes:** Eliminate crackling, dropouts, and frustrating delays. We configure your OS, drivers, and DAW settings for maximum stability and minimum buffer sizes.</li>
+                <li>**DAW Workflow & Plugin Mastery:** Customized training on Ableton, Reaper, Logic, and VST/VSTi suites (XLN, WAVES, Native Instruments) to streamline your creative process.</li>
+                <li>**Advanced Post-Production & Mixing Support:** Guided instruction on signal flow, complex effects chains, and mastering preparation using pro tools like Sonnox OXFORD, MELODYNE, and ANTARES.</li>
+            </ul>
 
-            <p class="note"><strong>Booking Schedule:</strong> Payment is required upfront via PayPal. After payment, you will receive confirmation and a direct email to finalize the appointment time.</p>
-        </section>
-    </main>
+            <div class="pricing-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Service Tier</th>
+                            <th>Session Time</th>
+                            <th>Price (USD)</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>**Quick Solve** (Specific Issue)</td>
+                            <td>30 Minutes</td>
+                            <td>75.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=520.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                        <tr>
+                            <td>**Deep Dive** (System Audit / Training)</td>
+                            <td>60 Minutes</td>
+                            <td>150.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1040.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                        <tr>
+                            <td>**Pro Package** (Full Workflow Setup)</td>
+                            <td>3 Hours (Discounted Rate)</td>
+                            <td>400.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2780.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-    <footer>
-        <p>&copy; 2025 Gem Experience. Contact: GemExperience@icloud.com</p>
-    </footer>
+            <p class="note">**How We Work:** Sessions are conducted via remote desktop sharing (Zoom/TeamViewer) and VoIP. Payment is required upfront via PayPal to confirm your booking time. All times are based on pure consultation time.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Gem Experience. Contact: GemExperience@icloud.com</p>
+    </footer>
 </body>
 </html>
