Refactor HTML structure and update section IDs
Updated section IDs and added classes for styling.

--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
     </header>
 
     <main>
-        <section id="authority">
+        <section id="consulting-services">
+            
             <h2>Why Consult Gem Experience?</h2>
             <p>You are hiring deep, tested expertise—not just software knowledge. My background ensures you get actionable, professional solutions:</p>
-            <ul>
+            <ul class="authority-list">
                 <li>Certified DAW Mastery: Certified license holder of Ableton Live Suite 10, 11 & Reaper, with hands-on proficiency in Logic Pro X and Pro Tools.</li>
                 <li>Low Latency Specialist: Decades of experience optimizing Mac and Windows systems specifically for flawless low-latency audio recording and complex VST/VSTi environments.</li>
                 <li>Corporate Production Background: Professional experience with Content Power House, Danish Radio, and Telia Sonera Mobile A/S.</li>
             </ul>
-        </section>
 
-        <section id="service">
-            <h2>Expert Technical Solutions</h2>
+            <h2 class="second-h2">Expert Technical Solutions</h2>
             <p>I offer targeted consulting across the three pillars of a professional production setup:</p>
             
-            <ul>
+            <ul class="service-list">
                 <li>System Optimization & Latency Fixes: Eliminate crackling, dropouts, and frustrating delays. We configure your OS, drivers, and DAW settings for maximum stability and minimum buffer sizes.</li>
                 <li>DAW Workflow & Plugin Mastery: Customized training on Ableton, Reaper, Logic, and VST/VSTi suites (XLN, WAVES, Native Instruments) to streamline your creative process.</li>
                 <li>Advanced Post-Production & Mixing Support: Guided instruction on signal flow, complex effects chains, and mastering preparation using pro tools like Sonnox OXFORD, MELODYNE, and ANTARES.</li>
