--- a/index-dk.html
+++ b/index-dk.html
@@ -26,16 +26,19 @@
     </header>
 
     <main>
-        <section id="service">
-            <h2>Tekniske Rådgivningssessioner</h2>
+        <section id="consulting-services">
+            
+            <h2>Ekspertise & Fokusområder</h2>
             <p>Få adgang til dybdegående ekspertise uden forpligtelser. Korte sessioner har en merpris for at kompensere for tidsforbruget. Større bookinger modtager rabat. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
             
-            <ul>
+            <ul class="authority-list"> 
                 <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
                 <li><strong>Systemoptimering:</strong> Rigs, hybrid-setups (analog/digital) og rådgivning om systemstabilitet.</li>
                 <li><strong>Udstyr & Investering:</strong> Uvildig konsultation om, hvad du skal købe næst, eller hvordan du bruger dit eksisterende udstyr bedst.</li>
                 <li><strong>Avanceret Fejlfinding:</strong> Løsninger på komplekse problemer, som Tier 1 support ikke kan håndtere.</li>
             </ul>
+
+            <h2 class="second-h2">Priser & Booking</h2>
 
             <div class="pricing-table">
                 <table>
