--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE Posted.html>
 <html lang="en">
 <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gem Experience | Advanced Production & System Consulting</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="canonical" href="https://gemexperience.github.io/pro-tech-consulting/index.html">
+    <link rel="alternate" hreflang="da" href="https://gemexperience.github.io/pro-tech-consulting/index-dk.html">
+    <link rel="alternate" hreflang="en" href="https://gemexperience.github.io/pro-tech-consulting/index.html">
 
     <meta property="og:title" content="Gem Experience | Low Latency & DAW System Expert" />
     <meta property="og:type" content="website" />
@@ -12,6 +17,7 @@
     <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
     <meta property="og:description" content="20+ years expert in Pro Audio/Video & Hybrid Analog/Digital Production. Advanced troubleshooting, system optimization, and crucial gear advice." />
     <meta property="og:site_name" content="Gem Experience" />
+</head>
 </head>
 <body>
     <div class="lang-switch">
