--- a/index-dk.html
+++ b/index-dk.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gem Experience | Professionel Tech Rådgivning</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="canonical" href="https://gemexperience.github.io/pro-tech-consulting/index-dk.html">
+    <link rel="alternate" hreflang="en" href="https://gemexperience.github.io/pro-tech-consulting/index.html">
+    <link rel="alternate" hreflang="da" href="https://gemexperience.github.io/pro-tech-consulting/index-dk.html">
 
     <meta property="og:title" content="Gem Experience | Ekspert Professionel Tech Rådgivning" />
     <meta property="og:type" content="website" />
@@ -12,6 +17,7 @@
     <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
     <meta property="og:description" content="20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion. Avanceret fejlfinding, systemoptimering og afgørende rådgivning om udstyr." />
     <meta property="og:site_name" content="Gem Experience" />
+</head>
 </head>
 <body>
     <div class="lang-switch">
