--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
 
             <div class="pricing-table">
-                <table>
+                <table lang="en">
                     <thead>
                         <tr>
                             <th>Service Tier</th>
