--- a/index-dk.html
+++ b/index-dk.html
@@ -47,7 +47,7 @@
             <h2 class="second-h2">Priser & Booking</h2>
 
             <div class="pricing-table">
-                <table>
+                <table lang="da">
                     <thead>
                         <tr>
                             <th>Sessionslængde</th>
