--- a/index.html
+++ b/index.html
@@ -56,6 +56,76 @@
     </script>
 </head>
 <body>
-    ```
+    <div class="lang-switch">
+        <a href="index.html" class="active">🇺🇸</a>
+        <a href="index-dk.html">🇩🇰</a>
+    </div>
 
-**Next Step:** Please apply the same structure cleanup and Schema addition (using the Danish version I provided previously) to your **`index-dk.html`** file, and you will have the best possible SEO foundation.
+    <header>
+        <img src="Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" alt="Gem Experience Logo" class="header-logo">
+        <h1>Gem Experience | Advanced Production & System Consulting</h1>
+        <p class="tagline">20+ Year Certified Expert in Low-Latency Audio, DAW Workflow, and Hybrid Analog/Digital Production. I diagnose and resolve the complex technical issues that Tier 1 support can't touch. Get specialist guidance to optimize your system for flawless creative flow.</p>
+    </header>
+
+    <main>
+        <section id="consulting-services">
+            
+            <h2>Why Consult Gem Experience?</h2>
+            <p>You are hiring deep, tested expertise—not just software knowledge. My background ensures you get actionable, professional solutions:</p>
+            <ul class="authority-list">
+                <li>Certified DAW Mastery: Certified license holder of Ableton Live Suite 10, 11 & Reaper, with hands-on proficiency in Logic Pro X and Pro Tools.</li>
+                <li>Low Latency Specialist: Decades of experience optimizing Mac and Windows systems specifically for flawless low-latency audio recording and complex VST/VSTi environments.</li>
+                <li>Corporate Production Background: Professional experience with Content Power House, Danish Radio, and Telia Sonera Mobile A/S.</li>
+            </ul>
+
+            <h2 class="second-h2">Expert Technical Solutions</h2>
+            <p>I offer targeted consulting across the three pillars of a professional production setup:</p>
+            
+            <ul class="service-list">
+                <li>System Optimization & Latency Fixes: Eliminate crackling, dropouts, and frustrating delays. We configure your OS, drivers, and DAW settings for maximum stability and minimum buffer sizes.</li>
+                <li>DAW Workflow & Plugin Mastery: Customized training on Ableton, Reaper, Logic, and VST/VSTi suites (XLN, WAVES, Native Instruments) to streamline your creative process.</li>
+                <li>Advanced Post-Production & Mixing Support: Guided instruction on signal flow, complex effects chains, and mastering preparation using pro tools like Sonnox OXFORD, MELODYNE, and ANTARES.</li>
+            </ul>
+
+            <div class="pricing-table">
+                <table lang="en">
+                    <thead>
+                        <tr>
+                            <th>Service Tier</th>
+                            <th>Session Time</th>
+                            <th>Price (USD)</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Quick Solve (Specific Issue)</td>
+                            <td>30 Minutes</td>
+                            <td>75.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=520.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                        <tr>
+                            <td>Deep Dive (System Audit / Training)</td>
+                            <td>60 Minutes</td>
+                            <td>150.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1040.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                        <tr>
+                            <td>Pro Package (Full Workflow Setup)</td>
+                            <td>3 Hours (Discounted Rate)</td>
+                            <td>400.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2780.00" class="button-small" target="_blank">Book Now</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <p class="note">How We Work: Sessions are conducted via remote desktop sharing (Zoom/TeamViewer) and VoIP. Payment is required upfront via PayPal to confirm your booking time. All times are based on pure consultation time.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Gem Experience. Contact: GemExperience@icloud.com</p>
+    </footer>
+</body>
+</html>
